add dynamic range to search by proximity
